[package]
name = "check_rev_deps"
version = "0.1.0"
authors = ["Robert Masen <r.f.masen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "0.7.0", features = ["serde"] }
toml = "0"
lazy_static = "*"
dirs = "2"
chrono = { version = "0.4", features = ["serde"] }
lettre = "0.9"
lettre_email = "0.9"